<resources>
    <string name="app_name">EcoCycle</string>
    <string name="tv_heading">EcoCycle</string>
    <string name="tv_subheading">Masuk atau Daftar</string>
    <string name="tv_inputemail">Email</string>
    <string name="tv_inputemailatauusername">Email atau Username</string>
    <string name="tv_tombolselanjutnya">Selanjutnya</string>
    <string name="tv_opsiAtau">Atau</string>
    <string name="tv_googleSignIn">Lanjutkan dengan Google</string>
    <string name="tv_daftaroption">Daftar</string>
    <string name="tv_inputnamapengguna">Nama Pengguna</string>
    <string name="tv_inputsandi">Sandi</string>
    <string name="tv_inputkonfirmasisandi">Konfirmasi Sandi</string>
    <string name="tv_registerbtn">Register</string>
    <string name="tv_masuktxt">Masuk</string>
    <string name="tv_konfirmasibtn">Konfirmasi</string>
    <string name="tv_lupasandi">Lupa kata sandi?</string>
    <string name="tv_koinsampah">Koin Sampah</string>
    <string name="tv_tukarbtn">Tukar</string>
    <string name="tv_misiharian">Misi Harian</string>
    <string name="tv_rasiomisiharian">00/10</string>
    <string name="tv_kategorisampahtext">Kategori Sampah</string>
    <string name="tv_plastiktext">Plastik</string>
    <string name="tv_kertaskardustext">Kertas/Kardus</string>
    <string name="tv_kacatext">Kaca</string>
    <string name="tv_hargasampahtext">Harga Sampah</string>
    <string name="tv_botolairmineraltext">Botol air mineral</string>
    <string name="tv_tutupbotoltext">Tutup Botol</string>
    <string name="tv_kantongplastiktext">Kantong Plastik</string>
    <string name="tv_galontext">Galon</string>
    <string name="tv_gelasplatiktext">Gelas Plastik</string>
    <string name="tv_bungkussnacktext">Bungkus Snack</string>
    <string name="tv_tempatcat">Tempat Cat</string>
    <string name="tv_kertashvstext">Kertas HVS</string>
    <string name="tv_kardustext">Kardus</string>
    <string name="tv_korantext">Koran</string>
    <string name="tv_gulungantisutext">Gulungan Tisu</string>
    <string name="tv_kertasbontext">Kertas BON</string>
    <string name="tv_kertascacahtext">Kertas Cacah</string>
    <string name="tv_duplektext">Duplek</string>
    <string name="tv_sarangtelurtext">Sarang Telur</string>
    <string name="tv_bukutext">Buku</string>
    <string name="tv_topleskacatext">Toples Kaca</string>
    <string name="tv_botolkacatext">Botol Kaca</string>
    <string name="tv_gelaskacatext">Gelas Kaca</string>
    <string name="tv_piringkacatext">Piring Kaca</string>
    <string name="tv_cangkirkacatext">Cangkir Kaca</string>
    <string name="tv_asbakkacatext">Asbak Kaca</string>
    <string name="tv_tekokacatext">Teko Kaca</string>
    <string name="tv_hargarp3500">Rp.3.500</string>
    <string name="tv_hargarp1500">Rp.1.500</string>
    <string name="tv_hargarp2200">Rp.2.200</string>
    <string name="tv_hargarp3000">Rp.3.000</string>
    <string name="tv_hargarp5000">Rp.5.000</string>
    <string name="tv_satuankg">/kg</string>
    <string name="tv_jumlahkoin">0000</string>
    <string name="tv_username">Username</string>
    <string name="tv_email">Email</string>
    <string name="tv_logout">Keluar</string>
    <string name="tv_addbtn">+</string>
    <string name="tv_kirimbtn">Kirim</string>
    <string name="tv_logoutsmall">Keluar dari akun dengan aman</string>
    <string name="default_web_client_id">77242582736-gq0mhmojk35vl13b47opv13lul81pu9g.apps.googleusercontent.com</string>
    <string name="tv_halo_apa_pertanyaanmu">Halo, apa pertanyaanmu?</string>
    <string name="tv_ajukanpertanyaantext">Pertanyaan yang Sering Diajukan (FAQ)</string>
    <string name="tv_apaituecocycle">Apa itu EcoCycle?</string>
    <string name="tv_whatsapp_admin">whatsapp admin</string>
    <string name="tv_instagram">Instagram</string>
    <string name="tv_tiktok">Tiktok</string>
    <string name="tv_EcoCycle_deskripsi">EcoCycle adalah aplikasi inovatif yang memungkinkan pengguna untuk membeli dan menjual sampah secara mudah dan praktis, dengan tujuan mendukung keberlanjutan dan menjaga kebersihan lingkungan. Melalui EcoCycle, Anda dapat dengan cepat mendaur ulang sampah rumah tangga atau bisnis Anda dengan cara yang lebih efisien dan menguntungkan.</string>
    <string name="tv_tidak_ada_transaksi_ditemukan">Tidak ada transaksi ditemukan</string>
    <string name="tv_text_penjelasan_transaksi">Saat ini anda belum melakukan transaksi. Mulai bertransaksi sekarang.</string>
    <string name="tv_notification_page">Notification page</string>
    <string name="halo_apa_pertanyaanmu">Halo, apa pertanyaanmu?</string>
    <string name="whatsapp_admin">whatsapp admin</string>
    <string name="instagram">Instagram</string>
    <string name="tiktok">Tiktok</string>
    <string name="EcoCycle_deskripsi">EcoCycle adalah aplikasi inovatif yang memungkinkan pengguna untuk membeli dan menjual sampah secara mudah dan praktis, dengan tujuan mendukung keberlanjutan dan menjaga kebersihan lingkungan. Melalui EcoCycle, Anda dapat dengan cepat mendaur ulang sampah rumah tangga atau bisnis Anda dengan cara yang lebih efisien dan menguntungkan.</string>
    <string name="tidak_ada_transaksi_ditemukan">Tidak ada transaksi ditemukan</string>
    <string name="text_penjelasan_transaksi">Saat ini anda belum melakukan transaksi. Mulai bertransaksi sekarang.</string>
    <string name="notification_page">Notification page</string>
    <string name="tv_halo_apa_pertanyaanmu">Halo, apa pertanyaanmu?</string>
    <string name="tv_ajukanpertanyaantext">Pertanyaan yang Sering Diajukan (FAQ)</string>
    <string name="tv_apaituecocycle">Apa itu EcoCycle?</string>
    <string name="tv_whatsapp_admin">whatsapp admin</string>
    <string name="tv_instagram">Instagram</string>
    <string name="tv_tiktok">Tiktok</string>
    <string name="tv_EcoCycle_deskripsi">EcoCycle adalah aplikasi inovatif yang memungkinkan pengguna untuk membeli dan menjual sampah secara mudah dan praktis, dengan tujuan mendukung keberlanjutan dan menjaga kebersihan lingkungan. Melalui EcoCycle, Anda dapat dengan cepat mendaur ulang sampah rumah tangga atau bisnis Anda dengan cara yang lebih efisien dan menguntungkan.</string>
    <string name="tv_tidak_ada_transaksi_ditemukan">Tidak ada transaksi ditemukan</string>
    <string name="tv_text_penjelasan_transaksi">Saat ini anda belum melakukan transaksi. Mulai bertransaksi sekarang.</string>
    <string name="tv_notification_page">Notification page</string>
    <string name="tv_lihatsemuatext">Lihat Semua</string>
    <string name="tv_catatantext">Catatan</string>
    <string name="tv_detailhargasampahtext">Detail Harga Sampah</string>
    <string name="tv_jumlahtotaltext">Jumlah Total</string>
    <string name="tv_nomortelepontext">Nomor Telepon</string>
    <string name="tv_tambahsampahbtn">Tambah</string>
    <string name="tv_tanggalpenjemputantext">Tanggal Penjemputan</string>
    <string name="tv_tambahsampahlainnyatext">Tambah Sampah Lainnya</string>
    <string name="tv_daftarsampahplasiktext">Daftar Sampah Plastik</string>
    <string name="tv_daftarsampahkertaskardustext">Daftar Sampah Kertas/Kardus</string>
    <string name="tv_daftarsampahkacatext">Daftar Sampah Kaca</string>
    <string name="tv_daftarsampahtext">Daftar Sampah</string>
    <string name="tv_alamatpenjemputantext">Alamat Penjemputan</string>
    <string name="tv_pilihalamattujuan">Pilih Alamat Jemputan</string>
    <string name="tv_keranjangtext">Keranjang</string>
    <string name="tv_contentdesciconlocation">Ikon lokasi untuk alamat penjemputan</string>
    <string name="tv_contentdescnotificon">Ikon notifikasi</string>
    <string name="tv_contentdescwhiteecocycle">Logo putih untuk ecocycle</string>
    <string name="tv_contentdesclataratas">Background bagian atas untuk halaman</string>
    <string name="tv_contentdescprofile">Setting Profile user</string>
    <string name="cd_plastikbtn">Tombol plastik</string>
    <string name="cd_kertaskardusbtn">Tombol kertas dan kardus</string>
    <string name="cd_kacabtn">Tombol kaca</string>
    <string name="tv_notificationtext">Notification</string>
    <string name="tv_promoinfotext">Promo/info</string>
    <string name="tv_terbarutext">Terbaru</string>
    <string name="tv_tentukanlokasitext">Tentukan Lokasi Anda</string>



</resources>