<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".RegisterPageActivity">

    <ImageView
        android:id="@+id/logoEcoCycle"
        android:src="@drawable/ecocycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_daftaroption"
        android:text="@string/tv_daftaroption"
        style="@style/subheadingtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoEcoCycle"
        app:layout_constraintBottom_toTopOf="@id/tv_inputnamapengguna"/>

    <EditText
        android:id="@+id/tv_inputnamapengguna"
        android:text="@string/tv_inputnamapengguna"
        android:inputType="textPersonName"
        android:paddingStart="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_daftaroption"
        app:layout_constraintBottom_toTopOf="@id/tv_inputemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/semiblack"
        style="@style/borderEditText"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/tv_inputemail"
        android:text="@string/tv_inputemail"
        android:inputType="textEmailAddress"
        android:paddingStart="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/semiblack"
        style="@style/borderEditText"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/tv_inputsandi"
        android:text="@string/tv_inputsandi"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_inputemail"
        app:layout_constraintBottom_toTopOf="@id/tv_inputkonfirmasisandi"
        android:textColor="@color/semiblack"
        style="@style/borderEditText"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/tv_inputkonfirmasisandi"
        android:text="@string/tv_inputkonfirmasisandi"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_inputsandi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/semiblack"
        style="@style/borderEditText"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/tv_registerbtn"
        android:text="@string/tv_registerbtn"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/royalblue"
        app:layout_constraintTop_toBottomOf="@id/tv_inputkonfirmasisandi"

        />



</androidx.constraintlayout.widget.ConstraintLayout>