<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ConfirmationRegisterPageActivity">

    <ImageView
        android:id="@+id/logoEcoCycle"
        android:src="@drawable/ecocycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_masuktxt"
        android:text="@string/tv_masuktxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoEcoCycle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/subheadingtext"/>

    <EditText
        android:id="@+id/tv_inputsandi"
        android:text="@string/tv_inputsandi"
        android:inputType="textVisiblePassword"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_masuktxt"
        app:layout_constraintBottom_toTopOf="@id/tv_konfirmasibtn"
        android:textColor="@color/semiblack"
        style="@style/borderEditText"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"   />

    <Button
        android:id="@+id/tv_konfirmasibtn"
        android:text="@string/tv_konfirmasibtn"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/royalblue"
        app:layout_constraintTop_toBottomOf="@id/tv_inputsandi"
        />

    <TextView
        android:id="@+id/tv_lupasandi"
        android:text="@string/tv_lupasandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/blue2"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_konfirmasibtn"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>